...
    "Abgeschlossen" : {

    },
    "Ablehnen" : {

    },
    "About" : {

    },
    "Accept" : {

    },
    "Accept Job" : {
...
      "isCommentAutoGenerated" : true
    },
    "Accessibility Testing View" : {
      "comment" : "The title of a view that allows testing accessibility features.",
      "isCommentAutoGenerated" : true
    },
    "Account" : {

    },
    "Account Actions" : {

    },
    "Account Type" : {
...
    "Buttons" : {

    },
    "Call driver" : {

    },
    "Cancel" : {

    },
    "Cancel Order" : {

    },
    "Cards" : {
...
    "Dein Premium Marktplatz" : {

    },
    "Dein Verdienst" : {

    },
    "Delete" : {

    },
    "Delete Account" : {

    },
    "Delete Product" : {

    },
    "Deliver to" : {
...
    "Du arbeitest seit %lld Stunden. Gönn dir eine Pause!" : {

    },
    "E-Mail" : {

    },
    "Edit" : {

    },
    "Edit Profile" : {

    },
    "Email" : {

    },
    "Email Address" : {
...
    "Kunden:" : {

    },
    "Label Small" : {

    },
    "Language" : {

    },
    "Last Sync:" : {
      "comment" : "A label describing the last time the app successfully synchronized with the server.",
      "isCommentAutoGenerated" : true
    },
...
    "Please add a payment method to Apple Wallet or use a different device." : {

    },
    "Please upload clear photos of your business license, tax documents, and any other relevant business registration documents." : {

    },
    "Preferences" : {

    },
    "Premium wird geladen ..." : {

    },
    "Preparation Time" : {
...

    },
    "Primary Action" : {
      "comment" : "A button with a primary style.",
      "isCommentAutoGenerated" : true
    },
    "Privacy & Security" : {

    },
    "Privacy Policy" : {

    },
    "Processing payment" : {
...
    "Processing..." : {

    },
    "Product Name" : {

    },
    "Profile" : {

    },
    "Profile Photo" : {

    },
    "Quantity" : {
...
      "comment" : "A button to run a speed test.",
      "isCommentAutoGenerated" : true
    },
    "Sample Card" : {

    },
    "Save" : {

    },
    "Schedule" : {

    },
    "Schedule Report" : {
...

    },
    "Services" : {
      "comment" : "A label describing the section of the sync status view related to the services.",
      "isCommentAutoGenerated" : true
    },
    "Settings" : {

    },
    "Share" : {

    },
    "Share Dashboard" : {
...
    "Shopping cart" : {

    },
    "Sign in to access your profile" : {

    },
    "Sign Out" : {

    },
    "Slow connection detected..." : {
      "comment" : "A message displayed when a user has a slow internet connection.",
      "isCommentAutoGenerated" : true
    },
...
    "Subtotal" : {

    },
    "Suggestion: %@" : {

    },
    "Support" : {

    },
    "Swipe horizontally to browse categories" : {

    },
    "Switch to list view" : {
...
